# recsys-challenge-2019-benchmarks

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
src/data_handling/: data_frame_functions.py  feature_building.py  helper_functions.py  nearest_neighbor_crunching.py  test_file_creation.py
src/main/: produce_example_data.py  run_all_models.py  run_single_model.py
src/models/: model_gbm_rank.py  model_log_reg.py  model_nn_interaction.py  model_nn_item.py  model_pop_absolute.py  model_pop_users.py  model_position.py  model_random.py
